src/objects/Quote_Offer_Code__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The offer code is active until it is deleted it will be inactive. We are using this field to do soft deletion in order to keep records for history.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blling_Period__c</fullName>
        <label>Blling Period</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deletion_Date__c</fullName>
        <label>Deletion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods__c</fullName>
        <label>Number of Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Code_Value__c</fullName>
        <description>save the offer code value enter by the agent (it will have value for acquisition)</description>
        <label>Offer Code Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field to link the offer code record to the corresponding Quote Rate Plan Charge Record. Starting in the Zuora version 6.50, this object is used for New Subscription quotes, as well. So it is used for all quote types.</description>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Offer Codes</relationshipLabel>
        <relationshipName>Quote_Offer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Offer Codes</relationshipLabel>
        <relationshipName>Quote_Offer_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Discount</fullName>
                </value>
                <value>
                    <fullName>Mid Term Discount</fullName>
                </value>
                <value>
                    <fullName>Default Offer Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isOfferCodeCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be set to true if the offer code is cloned from a previous quote</description>
        <label>isOfferCodeCloned</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Offer Code</label>
    <nameField>
        <displayFormat>Offer-{0000000000}</displayFormat>
        <label>Quote Offer Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Offer Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>